Updated actions schema
