# docs/swagger.json
@@ -2591,6 +2591,9 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "warning": {
+                    "type": "string"
                 }
             }
         },
@@ -3104,6 +3107,9 @@
                 "actionId": {
                     "type": "string"
                 },
+                "amount": {
+                    "type": "string"
+                },
                 "asset": {
                     "type": "string"
                 },
@@ -3140,13 +3146,43 @@
                 "endUtime": {
                     "type": "integer"
                 },
-                "jettonSwapAmountIn": {
-                    "type": "string"
-                },
-                "jettonSwapAmountOut": {
-                    "type": "string"
-                },
                 "jettonSwapDex": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferAmount": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferAsset": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferDestination": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferDestinationJettonWallet": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferSource": {
+                    "type": "string"
+                },
+                "jettonSwapDexIncomingTransferSourceJettonWallet": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferAmount": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferAsset": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferDestination": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferDestinationJettonWallet": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferSource": {
+                    "type": "string"
+                },
+                "jettonSwapDexOutgoingTransferSourceJettonWallet": {
                     "type": "string"
                 },
                 "jettonSwapPeerSwaps": {
@@ -3155,22 +3191,55 @@
                         "type": "string"
                     }
                 },
+                "jettonSwapSender": {
+                    "type": "string"
+                },
+                "jettonTransferComment": {
+                    "type": "string"
+                },
+                "jettonTransferCustomPayload": {
+                    "type": "string"
+                },
                 "jettonTransferForwardAmount": {
                     "type": "string"
+                },
+                "jettonTransferForwardPayload": {
+                    "type": "string"
+                },
+                "jettonTransferIsEncryptedComment": {
+                    "type": "boolean"
                 },
                 "jettonTransferQueryId": {
                     "type": "string"
                 },
-                "jettonTransferResponseAddress": {
+                "jettonTransferResponseDestination": {
+                    "type": "string"
+                },
+                "nftmintNFTItemIndex": {
+                    "type": "string"
+                },
+                "nfttransferCustomPayload": {
+                    "type": "string"
+                },
+                "nfttransferForwardAmount": {
+                    "type": "string"
+                },
+                "nfttransferForwardPayload": {
                     "type": "string"
                 },
                 "nfttransferIsPurchase": {
                     "type": "boolean"
                 },
+                "nfttransferNFTItemIndex": {
+                    "type": "string"
+                },
                 "nfttransferPrice": {
                     "type": "string"
                 },
                 "nfttransferQueryId": {
+                    "type": "string"
+                },
+                "nfttransferResponseDestination": {
                     "type": "string"
                 },
                 "opcode": {
